Code cleanup; got rid of lint warnings